--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,35 @@
-web:
-  restart: always
-  build: ./web
-  expose:
-    - "8000"
-  volumes:
-    - /usr/src/app/app/static
-  command: /usr/local/bin/gunicorn -w 3 -b :8000 app:app
+version: '2'
 
-nginx:
-  restart: always
-  build: ./nginx/
-  ports:
-    - "80:80"
-  volumes:
-    - /www/static
-  volumes_from:
-    - web
-  links:
-    - web:web
+services:
+  web:
+    restart: always
+    build: ./web
+    expose:
+      - "8000"
+    volumes:
+      - /usr/src/app/app/static
+    command: /usr/local/bin/gunicorn -w 3 -b :8000 app:app
+
+  nginx:
+    restart: always
+    build: ./nginx/
+    ports:
+      - "80:80"
+    volumes:
+      - /www/static
+    volumes_from:
+      - web
+    links:
+      - web:web
+
+
+  postgres:
+    restart: always
+    image: postgres:latest
+    volumes:
+      - data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+
+volumes:
+  data: {}
